--- a/manifest.json
+++ b/manifest.json
@@ -8,11 +8,13 @@
         "19": "icons/icon_19.png",
         "48": "icons/icon_48.png"
     },
+    "options_page": "options.html",
     "browser_action": {
         "default_icon": "icons/icon_48.png",
         "default_popup": "page_action.html"
     },
     "permissions": [
+        "storage",
         "clipboardRead",
         "clipboardWrite",
         "activeTab",
