--- a/manifest.json
+++ b/manifest.json
@@ -23,9 +23,22 @@
         "http://establishbalance.hostdev14sites.userlite.com/*"
     ],
     "background": {
-        "scripts": ["js/background.js"]
+        "scripts": [
+            "js/jquery-3.1.0.min.js",
+            "js/background.js"
+        ]
+    },
+    "externally_connectable": {
+        "matches": ["*://*.userlite.com/*"]
     },
     "commands": {
+        "reload-dev-scripts": {
+            "suggested_key": {
+                "default": "Alt+Q",
+                "mac": "Alt+Q"
+            },
+            "description": "Reload Dev Scripts"
+        },
         "reload-hfrag-level-1": {
             "suggested_key": {
                 "default": "Alt+1",
@@ -46,13 +59,6 @@
                 "mac": "Alt+3"
             },
             "description": "Reload hFrag level 3"
-        },
-        "reload-hfrag-level-4": {
-            "suggested_key": {
-                "default": "Alt+4",
-                "mac": "Alt+4"
-            },
-            "description": "Reload hFrag level 4"
         }
     },
     "content_scripts": [{
